--- a/index.html
+++ b/index.html
@@ -8,22 +8,37 @@
     <title>Calculator</title>
 </head>
 <body>
-    <p id="result"></p>
-    <button class="btn" id="0">0</button>
-    <button class="btn" id="1">1</button>
-    <button class="btn" id="2">2</button>
-    <button class="btn" id="3">3</button>
-    <button class="btn" id="4">4</button>
-    <button class="btn" id="5">5</button>
-    <button class="btn" id="6">6</button>
-    <button class="btn" id="7">7</button>
-    <button class="btn" id="8">8</button>
-    <button class="btn" id="9">9</button>
-
-    <button class="btn" id="add">+</button>
-    <button class="btn" id="subtract">-</button>
-    <button class="btn" id="multiply">x</button>
-    <button class="btn" id="divide">÷</button>
-    <button class="btn" id="equal">=</button>
+    <div class="calculator">
+        <div id="subDisplay"></div>
+        <div id="display">0</div>
+        <div class="buttons">
+            <button id="clearBtn">Clear</button>
+            <div class="row">
+                <button class="btn" id="one">1</button>
+                <button class="btn" id="two">2</button>
+                <button class="btn" id="three">3</button>
+                <button class="opBtn" id="divide">÷</button>
+            </div>
+            <div class="row">
+                <button class="btn" id="four">4</button>
+                <button class="btn" id="five">5</button>
+                <button class="btn" id="six">6</button>
+                <button class="opBtn" id="multiply">×</button>
+            </div>
+            <div class="row">
+                <button class="btn" id="seven">7</button>
+                <button class="btn" id="eight">8</button>
+                <button class="btn" id="nine">9</button>
+                <button class="opBtn" id="subtract">−</button>
+            </div>
+            <div class="row">
+                <button class="btn" id="zero">0</button>
+                <button class="btn" id="decimal">.</button>
+                <button class="operation" id="equal">=</button>
+                <button class="opBtn" id="add">+</button>
+            </div>
+            <button class="functionBtn" onclick="logxd()">log</button>
+        </div>
+    </div>
 </body>
 </html>
