--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
                 <button class="btn" id="four">4</button>
                 <button class="btn" id="five">5</button>
                 <button class="btn" id="six">6</button>
-                <button class="opBtn" id="multiply">×</button>
+                <button class="opBtn" id="multiply">x</button>
             </div>
             <div class="row">
                 <button class="btn" id="seven">7</button>
                 <button class="btn" id="eight">8</button>
                 <button class="btn" id="nine">9</button>
-                <button class="opBtn" id="subtract">−</button>
+                <button class="opBtn" id="subtract">-</button>
             </div>
             <div class="row">
                 <button class="btn" id="zero">0</button>
-                <button class="btn" id="decimal">.</button>
+                <button class="decbtn" id="decimal">.</button>
                 <button class="operation" id="equal">=</button>
                 <button class="opBtn" id="add">+</button>
             </div>
