undo button implementation

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <div id="subDisplay"></div>
         <div id="display">0</div>
         <div class="buttons">
+
+            <button id="undoBtn">Undo</button>
             <button id="clearBtn">Clear</button>
             <div class="row">
                 <button class="btn" id="one">1</button>
